# player_labs

./: .gitignore  AGENTS.md  README.md  TODO.md  WORKTREE_RESULTS.md  best_practices.md  player-build.md  pyproject.toml  user_preferences.md
.claude/: settings.json
agricogla_lab/: .gitignore  README.md
agricogla_lab/candidates/: A-family-growth-race.json  B-renovation-stone.json  C-breadth-fill.json  D-food-sequencing.json
agricogla_lab/docs/: LENS_EXPERIMENTS.md  SIGNALS.md
agricogla_lab/tools/: beam_round.py  build_player.sh  lenses.py  versions.env
crewrift_lab/: AGENTS.md  README.md  TENTATIVE_LESSONS.md  WEEKLY_CONTEXT.md  WORKING_CONTEXT.md  aaron_compare.py  best_practices.md  kill_latency.py  make_wh_input.py  prime_summary.py  suss_rate.py  user_preferences.md  visibility_at_ready.py
crewrift_lab/chat_study/: README.md  build_dataset.py  fit.py  label_chats.py
crewrift_lab/docs/: README.md  crewrift-gameplay.md  crewrift-player.md  crewrift-protocol.md  crewrift-replays.md  experiment_v85_chat_then_skip.html  h4_experiment.html
crewrift_lab/lessons_archive/: README.md  TENTATIVE_LESSONS-20260612-150445.md  TENTATIVE_LESSONS-20260613-103435.md  TENTATIVE_LESSONS-20260626-232231.md  TENTATIVE_LESSONS-20260630-104648.md  TENTATIVE_LESSONS-20260630-232348.md  TENTATIVE_LESSONS-20260701-100549.md  TENTATIVE_LESSONS-20260701-112311.md  TENTATIVE_LESSONS-20260701-113134.md  TENTATIVE_LESSONS-20260705-225823.md  TENTATIVE_LESSONS-20260706-114032.md  TENTATIVE_LESSONS-20260709-114152.md  TENTATIVE_LESSONS-20260713-102008.md  TENTATIVE_LESSONS-20260713-150034.md  TENTATIVE_LESSONS-20260713-155414.md  TENTATIVE_LESSONS-20260714-103950.md  TENTATIVE_LESSONS-20260714-164518.md
crewrift_lab/ranking_analysis/: README.md  _data.py  bt_model.py  differential.py  features.py  rank_analysis.py  report_gen.py  serve.sh  voting_metrics.py  voting_report_gen.py
crewrift_lab/suspicion_lab/: .gitignore  README.md
crewrift_lab/tools/: behavior_compare.py  build_expand_replay.sh  build_player.sh  lessons_stop_nudge.sh  nav_bake.py  rotate_lessons.sh  versions.env  vision_bake.py
ctf_lab/: .gitignore  AGENTS.md  README.md  TENTATIVE_LESSONS.md  WORKING_CONTEXT.md  best_practices.md
ctf_lab/ctf/: __init__.py
ctf_lab/docs/: ctf-gameplay.md
ctf_lab/lessons_archive/: TENTATIVE_LESSONS-20260713-150034.md  TENTATIVE_LESSONS-20260713-155415.md  TENTATIVE_LESSONS-20260714-103809.md  TENTATIVE_LESSONS-20260714-184706.md
ctf_lab/tools/: agg_eval.py  build_expand_replay.sh  build_player.sh  event_warehouse.py  expand_replay_json.nim  lessons_stop_nudge.sh  rotate_lessons.sh  versions.env
cue_n_woo_lab/: AGENTS.md  README.md  TENTATIVE_LESSONS.md  WORKING_CONTEXT.md  best_practices.md
cue_n_woo_lab/cheater/: .dockerignore  Dockerfile  __init__.py  answers.py  config.py  player.py  validator.py
cue_n_woo_lab/docs/: axis-combo-system.md  cue-n-woo-gameplay.md  directive-exploit-probe.html  fingerprint-report.html  fingerprint-report.json  league-infra-incident-2026-06-12.md  probe-findings.md  r273-report-analyst.html  r273-report-narrative.html  r275-report-analyst.html  r275-report-narrative.html  r275-report-strategist.html  recent-rounds-analysis.html  v4-matched-eval-2026-06-15.txt  v5-matched-eval-2026-06-15.txt  v6-matched-eval-2026-06-16.txt  v6-question-selection-2026-06-16.txt  v7-vs-v6-ab-2026-06-16.txt  v7eval-analyst.html
cue_n_woo_lab/lessons_archive/: README.md  TENTATIVE_LESSONS-20260615-094356.md  TENTATIVE_LESSONS-20260619-152316.md  TENTATIVE_LESSONS-20260630-104648.md  TENTATIVE_LESSONS-20260701-100549.md  TENTATIVE_LESSONS-20260701-112311.md  TENTATIVE_LESSONS-20260704-160250.md  TENTATIVE_LESSONS-20260705-164951.md  TENTATIVE_LESSONS-20260705-165717.md  TENTATIVE_LESSONS-20260706-091124.md  TENTATIVE_LESSONS-20260713-102008.md  TENTATIVE_LESSONS-20260713-150034.md
cue_n_woo_lab/mentalist/: .dockerignore  Dockerfile  README.md  VERSION_LOG.md  __init__.py  __main__.py  classifier.py  config.py  player.py  validator.py  writer.py
cue_n_woo_lab/mentalist_v4/: Dockerfile  README.md  VERSION_LOG.md  __init__.py  __main__.py  author.py  config.py  engine.py  fingerprint.py  interview.py  judge_client.py  validator.py  writer.py
cue_n_woo_lab/probe/: README.md  build_cache.py  build_v6_references.py  classify_offline.py  compare_matchers.py  confirm_idfirst.py  confirm_probe_combo.py  extract_passphrases.py  fingerprint_report.py  fingerprint_report_v6.py  gen5_identity.py  gen6_maxgoblin.py  gen_more_combos.py  multiseed_combo.py  optimize_injection.py  optimize_injection_results.json  optimize_injection_v2.py  optimize_injection_v2_results.json  optimize_probe_combo.py  optimize_probe_combo_results.json  probe_axis_binning.py  probe_axis_recovery.py  probe_cheater_v2_end_to_end.py  probe_classify.py  probe_dashboard.html  probe_dashboard_server.py  probe_fantasy_questions.py  probe_fantasy_v2.py  probe_goblin_saturation.py  probe_injection_duel.py  probe_injection_strength.py  probe_injection_strength_cache.json  probe_injection_words.py  probe_injection_words_cache.json  probe_question_selection.py  probe_scoring.py  probe_selfreport_fingerprint.py  probe_selfreport_v2.py  probe_sonnet_injection.py  probe_style_leverage.py  (+10 more)
cue_n_woo_lab/recall_player/: Dockerfile  README.md  VERSION_LOG.md  __init__.py  __main__.py  answers.py  config.py  player.py  validator.py
cue_n_woo_lab/tools/: lessons_stop_nudge.sh  rotate_lessons.sh
docs/: crewrift-play-prompt.md  getting-started.md  player-engineering.md  player-improvement-loop.md  starter-prompt.md
docs/agent-memory/: MEMORY.md  README.md  cnw-axis-combo-rewrite.md  cnw-bedrock-now-working.md  cnw-league-iam-hotfix.md  cnw-qualify-latency.md  cnw-recall-player-champion.md  cnw-superflood-champion.md  cue-n-woo-lab.md  (+2 more)
heartleaf_lab/: AGENTS.md  ISSUE-xreq-500-coworld-manifest-reporter.md  README.md  TENTATIVE_LESSONS.md  WORKING_CONTEXT.md  best_practices.md
tools/: lessons_stop_nudge.sh
vanilla_wow_lab/: AGENTS.md  README.md  TENTATIVE_LESSONS.md  WORKING_CONTEXT.md  best_practices.md
(+2396 files in other folders)
