[project]
name = "player-labs"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "coworld[auth]>=0.1.20",
    "httpx>=0.28.1",
    # The shared player SDK that vendored players import as `players.player_sdk`,
    # plus its base deps (anthropic, etc.). Installed straight from the public
    # Metta-AI/players repo (pinned below) — no local checkout required. To bump the
    # SDK, change the `rev` here (and PLAYERS_SDK_REF in crewrift_lab/tools/versions.env
    # so built images match) and re-run `uv lock`.
    "players",
    # crewborg's direct third-party deps (vendored fork under crewrift_lab/crewrift/crewborg/)
    "numpy>=2.0.0",
    "pydantic>=2.12.2",
    "websockets>=16.0",
    "cramjam>=2.8.0",
]

[tool.uv.sources]
players = { git = "https://github.com/Metta-AI/players", rev = "5286e7c601559b980e14cda815314daba98afcc7" }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist",
]

# Vendored players live under crewrift_lab/ grouped by game (e.g. crewrift.crewborg).
# Each is a true in-lab fork, free to drift from upstream; only the shared SDK is
# imported from the players dependency. Exposing crewrift_lab/ as a packages source
# root makes `from crewrift.crewborg import build_runtime` importable after uv sync
# (editable — edits are live).
#
# crewborg is the only Python policy. notsus and suspectra are vendored *Nim*
# players (source-only; built externally via their Dockerfiles) — they are NOT
# Python packages, so they're excluded from package discovery even though
# suspectra carries an upstream-packaging __init__.py.
[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["crewrift_lab"]
include = ["crewrift*"]
exclude = ["crewrift.notsus*", "crewrift.suspectra*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
