[project]
name = "player-labs"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "coworld[auth]>=0.1.20",
    "httpx>=0.28.1",
    # The shared player SDK that vendored players import as `players.player_sdk`,
    # plus its base deps (anthropic, etc.). Installed straight from the public
    # Metta-AI/players repo — no local checkout required. The source below tracks
    # `main`; `uv.lock` records the exact commit (reproducible clones). To adopt the
    # latest SDK, run `uv lock --upgrade-package players` (no hand-edited SHAs).
    "players",
    # crewborg's direct third-party deps (vendored fork under crewrift_lab/crewrift/crewborg/)
    "numpy>=2.0.0",
    "pydantic>=2.12.2",
    "websockets>=16.0",
    "cramjam>=2.8.0",
    # Meeting chat NLP (crewborg imposter bandwagon, design §10.5): dependency-parse
    # negation scope on opponents' chat. Loaded lazily in the background and gated by
    # CREWBORG_CHAT_NLP, so it never touches the gameplay hot path. The en_core_web_sm
    # model is pinned by URL for reproducible installs; keep it in sync with spaCy's
    # minor version.
    "spacy>=3.8.0,<3.9.0",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "scikit-learn>=1.9.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
]

[tool.uv.sources]
players = { git = "https://github.com/Metta-AI/players", branch = "main" }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist",
]

# Vendored players live under crewrift_lab/ grouped by game (e.g. crewrift.crewborg).
# Each is a true in-lab fork, free to drift from upstream; only the shared SDK is
# imported from the players dependency. Exposing crewrift_lab/ as a packages source
# root makes `from crewrift.crewborg import build_runtime` importable after uv sync
# (editable — edits are live).
#
# crewborg is the only Python policy. notsus and suspectra are vendored *Nim*
# players (source-only; built externally via their Dockerfiles) — they are NOT
# Python packages, so they're excluded from package discovery even though
# suspectra carries an upstream-packaging __init__.py.
[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["crewrift_lab"]
include = ["crewrift*"]
exclude = ["crewrift.notsus*", "crewrift.suspectra*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
