[project]
name = "player-labs"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "coworld[auth]>=0.1.20",
    "httpx>=0.28.1",
    # The shared player SDK that vendored players import as `players.player_sdk`,
    # plus its base deps (anthropic, boto3 for Bedrock, etc.). The `players` repo moved
    # into the Metta-AI/coworld-tools monorepo as the `players/` subdirectory, so we
    # install it from coworld-tools' GitHub source TARBALL (see [tool.uv.sources]).
    # Tarball (not a git source) on purpose: a GitHub archive excludes submodules, which
    # sidesteps coworld-tools' broken `players/users/relh/co-gas` submodule that fails
    # uv's recursive git clone (coworld-tools issue #13). This matches what the hosted
    # image builds against (Dockerfile + tools/versions.env PLAYERS_SDK_REF). To adopt a
    # newer SDK, bump the tarball SHA below to coworld-tools' current `main`
    # (`git ls-remote https://github.com/Metta-AI/coworld-tools main`) and `uv lock`.
    # `[bedrock]` pulls boto3 to match the hosted image's `players[bedrock]` install — the
    # SDK lazy-imports boto3 only when use_bedrock=True, so it's inert locally (no sidecar).
    "players[bedrock]",
    # crewborg's direct third-party deps (vendored fork under crewrift_lab/crewrift/crewborg/)
    "numpy>=2.0.0",
    "pydantic>=2.12.2",
    "websockets>=16.0",
    "cramjam>=2.8.0",
    # Meeting chat NLP (crewborg imposter bandwagon, design §10.5): dependency-parse
    # negation scope on opponents' chat. Loaded lazily in the background and gated by
    # CREWBORG_CHAT_NLP, so it never touches the gameplay hot path. The en_core_web_sm
    # model is pinned by URL for reproducible installs; keep it in sync with spaCy's
    # minor version.
    "spacy>=3.8.0,<3.9.0",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "scikit-learn>=1.9.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
]

[tool.uv.sources]
# coworld-tools tarball (NOT git) — see the `players` dependency comment above for why
# (avoids the broken co-gas submodule that breaks uv's recursive clone). SHA = coworld-tools
# `main` as of 2026-06-26, matching the hosted image build.
players = { url = "https://github.com/Metta-AI/coworld-tools/archive/6dcd022e013febffb0043b5f625f853c5cc36e0f.tar.gz", subdirectory = "players" }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist",
]

# Vendored players live under crewrift_lab/ grouped by game (e.g. crewrift.crewborg).
# Each is a true in-lab fork, free to drift from upstream; only the shared SDK is
# imported from the players dependency. Exposing crewrift_lab/ as a packages source
# root makes `from crewrift.crewborg import build_runtime` importable after uv sync
# (editable — edits are live).
#
# crewborg is the only Python policy. notsus and suspectra are vendored *Nim*
# players (source-only; built externally via their Dockerfiles) — they are NOT
# Python packages, so they're excluded from package discovery even though
# suspectra carries an upstream-packaging __init__.py.
[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["crewrift_lab"]
include = ["crewrift*"]
exclude = ["crewrift.notsus*", "crewrift.suspectra*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
